deploy/k8s/overlays/production/https-redirect-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: reiver
spec:
  redirectScheme:
    scheme: https
    permanent: true
