deploy/k8s/overlays/production/pond-pgwire-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: reiver-pond-pgwire
  namespace: reiver
spec:
  type: NodePort
  ports:
    - port: 5433
      targetPort: pgwire
      name: pgwire
      nodePort: 30543
